2002-06-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: config.h is in src/.

2002-09-24  Hans Olav Eggestad <hans.olav.eggestad@jordforsk.no>

	* src/save.c: Consolidate dump of data and function plot styles.

2002-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c: Restore previous behavior of blank user tic marks.

2002-09-16  Harald Harders  <h.harders@tu-bs.de>

	* configure.in, src/misc.c, src/util.c, src/variable.c: Preliminary
	workaround for missing <dirent.h>.

2002-09-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (load_tic_user): Make sure ticdef.def.user is
 	initialized.  Fixes bug #607839.  Moved assignment of ticdef.type
 	here.
	(add_tic_user): Made 'static', local prototype added.  Superfluous
 	casts and checks removed. Removed assignment of ticdef.type
	(free_marklist): Moved local variable `freeable' into block.
	Removed pointless casts.

	* src/axis.h (add_tic_user): Removed prototype that never belonged
	here.

2002-09-09  Johannes Zellner  <johannes@zellner.org>

	* src/mouse.c: changed "pointtype 1" to "point pt 1" which conforms to
	the changed point option for 'set label'.

2002-09-09  Johannes Zellner  <johannes@zellner.org>

	* src/plot.c: reordering: init_color() must come BEFORE load_rcfile().

2002-09-06  Harald Harders  <h.harders@tu-bs.de>

	* demo/Makefile.am demo/Makefile.am.in docs/psdoc/ps_fontfile_doc.tex
	demo/fontfile.dem demo/fontfile_latex.dem: Redo fontfile demos to use
	commonly available fonts.

	* term/post.trm src/misc.c src/misc.h: Add reset command
	'set term post nofontfiles'.

2002-09-05  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c term/x11.trm: Support for rotated text.

2002-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Avoid use of snprintf().

2002-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: (Harald Harders) Report FontName of embedded fonts.
