@@ -1,5 +1,5 @@
 /*
- * $Id: pm.trm,v 1.30 2002/06/10 18:53:00 mikulik Exp $
+ * $Id: pm.trm,v 1.31 2002/07/26 16:42:29 mikulik Exp $
  */
 
 /* GNUPLOT - pm.trm */
@@ -503,9 +503,8 @@ PM_linetype(int lt)
 TERM_PUBLIC int
 PM_text_angle(int ang)
 {
-    int pm_ang = (ang ? 1 : 0);
     putc(SET_ANGLE, PM_pipe);
-    fwrite(&pm_ang, sizeof(int), 1, PM_pipe);
+    fwrite(&ang, sizeof(int), 1, PM_pipe);
     return (TRUE);
 }
 
