@@ -1,4 +1,8 @@
-2002-06-26  Petr Mikulik  <mikulik@physics.muni.cz>
+2002-09-26  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* term/pm.trm src/os2/gclient.c: Support for rotated text.
+
+2002-09-26  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* config/makefile.os2: config.h is in src/.
 
@@ -1113,7 +1117,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/09/25 05:33:56 $).
+	last modification date (from the tag $Date: 2002/09/26 19:10:06 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
